--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
-    Properties : 4
 </head>
 <body>
-   
+    <p>Properties : 4</p>
 </body>
 </html>
