replace hardcode property number with variable

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,6 @@
     <title>Welcome</title>
 </head>
 <body>
-    <p>Properties : 4</p>
+    <p>Properties : {{ properties|length }}</p>
 </body>
 </html>
