--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 <body>
     <p>Properties : {{ properties|length }}</p>
 
-    <table class="table">
+    <table class="table" id="properties-table">
   <thead>
     <tr>
 {#      <th scope="col">#</th>#}
