make table heading more clear

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 {#      <th scope="col">#</th>#}
       <th scope="col">OSID</th>
       <th scope="col">Building Coordinates</th>
-      <th scope="col">Size</th>
+      <th scope="col">Size (square meter)</th>
       <th scope="col">Building Age Updated Date</th>
       <th scope="col">Connectivity</th>
     </tr>
